# gate

./: .gitignore  Makefile  Makefile.am  README  config.h.in  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
src/: MC33886.c  MC33886.h  MC_Config.c  MC_Config.h  Makefile.am  Makefile.in  main.c
